--- a/package.json
+++ b/package.json
@@ -5,12 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "lint": "standard --verbose | snazzy",
+    "fmt": "prettier --write '{,!(coverage)/**/}*.js' && eslint --fix .",
+    "fmt:ci": "prettier -l '{,!(coverage)/**/}*.js'",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "pre-commit": [
-    "lint"
-  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JGAntunes/do-dynamic-dns.git"
@@ -30,12 +41,20 @@
   },
   "homepage": "https://github.com/JGAntunes/do-dynamic-dns#readme",
   "devDependencies": {
-    "pre-commit": "^1.2.2",
-    "snazzy": "^7.0.0",
-    "standard": "^10.0.3"
+    "eslint": "^5.11.1",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.3.0",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.3"
   },
   "dependencies": {
-    "bunyan": "^1.8.12",
+    "bunyan": "^1.8.14",
     "@hapi/wreck": "^17.1.0"
   }
 }
